Correct vertical alignment of sortable table handle
The handle of sortable tables did not correctly align to the text content of the other table cells. Because of the new vertical alignment of our new table style we need to adjust this.

Also removes a duplicate `table td .handle` declaration.

--- a/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_tables.scss
@@ -7,9 +7,12 @@ table {
     text-overflow: ellipsis;
 
     .handle {
+      @extend .fa;
+      @extend .fa-bars;
+      cursor: move;
       display: block !important;
       text-align: center;
-      padding-right: 0;
+      padding: 3px 0;
     }
 
     &.actions {
@@ -83,13 +86,6 @@ table {
     input[type="text"] {
       width: 100%;
     }
-
-    .handle {
-      @extend .fa;
-      @extend .fa-bars;
-      cursor: move;
-    }
-
   }
 
   &.no-borders {
